aggiunte idee ui e file per vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-/build-ParkingManagerPAO-Desktop_Qt_6_2_10_GCC_64bit-Debug
+.DS_STORE
+**/.vscode/
+
+ParkingManagerPAO/.cache
+ParkingManagerPAO/.qt
+ParkingManagerPAO/.rcc
+ParkingManagerPAO/CMakeFiles
+ParkingManagerPAO/SensorFlow.app
+ParkingManagerPAO/cmake_install.cmake
+ParkingManagerPAO/CMakeCache.txt
+ParkingManagerPAO/CMakeLists.txt
+ParkingManagerPAO/compile_commands.json
+ParkingManagerPAO/Makefile
+ParkingManagerPAO/.qmake.stash
+ParkingManagerPAO/**/*.o
+ParkingManagerPAO/**/moc_*
+ParkingManagerPAO/ParkingManagerPAO
+
+build-*
